Add basic workout criteria
