# docs/swagger.json
@@ -188,6 +188,17 @@
                     "Workout"
                 ],
                 "summary": "Generate workout plan",
+                "parameters": [
+                    {
+                        "description": "User expectations",
+                        "name": "details",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controllers.GeneratePlanRequest"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK"
@@ -239,6 +250,17 @@
         }
     },
     "definitions": {
+        "controllers.GeneratePlanRequest": {
+            "type": "object",
+            "properties": {
+                "bodyparts": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
         "controllers.RefreshTokenRequest": {
             "type": "object",
             "properties": {
